# interview_summarizer

./: .env.example  .gitignore  MANIFEST.in  README.md  config.yaml  interview_summarizer.py  prompts.yaml  pyproject.toml
src/interview_summarizer/: main.py
src/meeting_summarizer/: main.py  prompts_interview.yaml  prompts_meeting.yaml
